--- a/Multinomial_Logistic_Regression.ipynb
+++ b/Multinomial_Logistic_Regression.ipynb
@@ -13,7 +13,8 @@
         "    - resulted in marginal increase: 0.49526\n",
         "    - This strips the word to ensure there is no whitespace and lowers case to better match with doc\n",
         "- `features.append(label_count / len(words) if len(words) > 0 else 0)` \n",
-        "    - This normalises the label count by the length of the text, to stop longer texts being seen as more important solely based on their length"
+        "    - This normalises the label count by the length of the text, to stop longer texts being seen as more important solely based on their length\n",
+        "    - 0.49842"
       ]
     },
     {
@@ -32,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -59,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -72,6 +73,7 @@
         "        List with dimension 4: list containing the features extracted from the text in the order [ln text_len, # sports words, # business words, # science words].\n",
         "    \"\"\"\n",
         "  words = text.split()\n",
+        "  words = [word.strip().lower() for word in words]\n",
         "  features = [math.log(len(words))]\n",
         "\n",
         "  # labels = ['sports', 'business', 'science']\n",
@@ -83,7 +85,6 @@
         "\n",
         "    # for each word in the text,\n",
         "    for word in words:\n",
-        "      word = word.strip().lower()\n",
         "      if word in label_words:\n",
         "        label_count += 1\n",
         "    features.append(label_count / len(words) if len(words) > 0 else 0)\n",
@@ -169,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -190,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -258,14 +259,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Training:   0%|          | 16/5000 [00:00<00:33, 150.53it/s]"
+            "Training:   0%|          | 15/5000 [00:00<00:35, 141.41it/s]"
           ]
         },
         {
@@ -283,7 +284,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Training: 100%|██████████| 5000/5000 [00:33<00:00, 147.54it/s]\n"
+            "Training: 100%|██████████| 5000/5000 [00:33<00:00, 147.64it/s]\n"
           ]
         },
         {
@@ -363,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
