main learning point

--- a/Multinomial_Logistic_Regression.ipynb
+++ b/Multinomial_Logistic_Regression.ipynb
@@ -23,7 +23,8 @@
         "    - this worsened accuracy so removed\n",
         "- `dollar_count = text.count('#36;') + text.count('$')`\n",
         "    - improved accuracy to 0.56824\n",
-        "    - not just dollar because I noticed the #36; often in front of billiions etc in the text"
+        "    - not just dollar because I noticed the #36; often in front of billiions etc in the text\n",
+        "- main learning point you can have as many features as you want, and when you multiply features (X - (samples, features)) by the weights (features, classes), it will create a vector as long as the number of classes (Z - (samples, classes))."
       ]
     },
     {
